syntax = "proto3";

package OmniFlix.alloc.v1beta1;

option go_package = "github.com/OmniFlix/omniflixhub/v6/x/alloc/types";

import "gogoproto/gogo.proto";


message WeightedAddress {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  string weight = 2 [
    (gogoproto.moretags) = "yaml:\"weight\"",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message DistributionProportions {
  string staking_rewards = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"staking_rewards\"",
    (gogoproto.nullable) = false
  ];
  string nft_incentives = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"nft_incentives\"",
    (gogoproto.nullable) = false
  ];
  string node_hosts_incentives = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"node_hosts_incentives\"",
    (gogoproto.nullable) = false
  ];
  string developer_rewards = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"developer_rewards\"",
    (gogoproto.nullable) = false
  ];
  string community_pool = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
}

message Params {
  // distribution_proportions defines the proportion of the minted denom
  DistributionProportions distribution_proportions = 1
      [ (gogoproto.nullable) = false ];
  // address to receive developer rewards
  repeated WeightedAddress weighted_developer_rewards_receivers = 2 [
    (gogoproto.moretags) = "yaml:\"weighted_developer_rewards_receivers\"",
    (gogoproto.nullable) = false
  ];
  // address to receive nft incentives
  repeated WeightedAddress weighted_nft_incentives_receivers = 3 [
    (gogoproto.moretags) = "yaml:\"weighted_nft_incentives_receivers\"",
    (gogoproto.nullable) = false
  ];
  // address to receive node host incentives
  repeated WeightedAddress weighted_node_hosts_incentives_receivers = 4 [
    (gogoproto.moretags) = "yaml:\"weighted_node_hosts_incentives_receivers\"",
    (gogoproto.nullable) = false
  ];
}
